# cpp-technical-evaluation

./: .gitignore  CMakeLists.txt  MotionRecorderDeploy.cmake  readme.md
docker/: docker-compose.yml
src/: AFrameAcquisitor.h  AFrameWriter.h  AMotionRecorderManager.cpp  AMotionRecorderManager.h  CMakeLists.txt  CV_FrameAcquisitor.cpp  CV_FrameAcquisitor.h  CV_FrameDataModel.cpp  CV_FrameDataModel.h  CV_FrameWriter.cpp  CV_FrameWriter.h  CV_MotionController.h  CV_MotionRecorderManager.cpp  CV_MotionRecorderManager.h  CameraMotionDetection.cpp  CameraMotionDetection.h  CameraMotionDetectionWidget.cpp  CameraMotionDetectionWidget.h  FrameAcquisitor.cpp  FrameAcquisitor.h  FrameController.cpp  FrameController.h  FrameDataModel.cpp  FrameDataModel.h  FrameWrapper.h  FrameWriter.cpp  FrameWriter.h  IFrameAcquisitor.h  IFrameDataModel.h  IFrameWriter.h  IMotionController.h  MainWindow.cpp  MainWindow.h  MotionController.cpp  MotionController.h  MotionRecorderManager.cpp  MotionRecorderManager.h  MotionRecorderWidget.cpp  MotionRecorderWidget.h  main.cpp  (+1 more)
src/motion_detector/include/: motion_detector.hpp
