cmake_minimum_required(VERSION 3.5)

project(MotionRecorder LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set (MOTION_RECORDER_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

set(APP_ICON_RESOURCE_WINDOWS ${MOTION_RECORDER_ROOT_DIR}/MotionRecorder.rc)

if (CMAKE_BUILD_TYPE EQUAL "RELEASE")
    set(OUTPUT_BIN_DIR ${MOTION_RECORDER_ROOT_DIR}/bin/Release)
else()
    set(OUTPUT_BIN_DIR ${MOTION_RECORDER_ROOT_DIR}/bin/Debug)
endif()

include(MotionRecorderDeploy.cmake)

add_subdirectory(src)

set_target_properties(MotionRecorder PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_BIN_DIR})

